# AdWeRSBAD

./: .gitignore  CITATION.cff  LICENSE.md  README.md  adwersbad_labels.json  database.ini  pyproject.toml  setup.py  setup_pip_index_torch_cpu.sh
adwersbad/: __init__.py  adwersbad.py  class_helpers.py  coders.py  config.py  db_helpers.py  log.py  scenarios.py  weather_import.py
adwersbad/utils/: display.py  pointcloud_utils.py  transform.py
dataset_imports/: createtable.py  file_helpers.py  import_nuimages.py  import_nuscenes.py  import_waymo.py
dbsetup/: compose.yml  postgresql.conf
dbsetup/docker-entrypoint-initdb.d/: init-user-db.sh
labeling/: .gitignore  package-lock.json  setup_and_run.sh
labeling/backend/: main.py
labeling/frontend/: package-lock.json  package.json  vite.config.js
labeling/frontend/src/: App.jsx  api.js
requirements/: nuscenes.txt  waymo.txt
test/: test_akidataset.py  testmp.py
