[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adwersbad"
version = "0.1"
description = "AdWeRSBAD: Adverse Weather and Road Scenarios Benchmark for Autonomous Driving"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "distinctipy",
    "psycopg",
    "psycopg-binary",
    "psycopg-pool",
    "pyquaternion",
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
]


[project.optional-dependencies]
waymo = [
    "tensorflow==2.12.0",
    "tensorflow-datasets==4.9.6",
    "tensorflow-metadata==1.15.0",
    "waymo-open-dataset-tf-2-12-0==1.6.4",
]

nuscenes = [
    "numpy<2",
    "nuscenes-devkit",
    "openmeteo-requests",
    "requests_cache",
    "retry_requests",
    "suncalc",
]

all = [
    "nuscenes-devkit",
    "openmeteo-requests",
    "requests_cache",
    "retry_requests",
    "suncalc",
    'tensorflow==2.12.0',
    "tensorflow-datasets==4.9.6",
    "tensorflow-metadata==1.15.0",
    "waymo-open-dataset-tf-2-12-0==1.6.4",
]




[tool.setuptools.packages.find]
where = ["."]
include = ["adwersbad"]

[tool.setuptools.package-data]
"adwersbad" = ["mydatabase.ini"]

